samples/_failures_safe/1761214428_ac53d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_59cdae95.c: In function ‘main’:
./samples/SAFE/__tmp_59cdae95.c:148:5: error: ‘demonstrate_’ undeclared (first use in this function)
  148 |     demonstrate_
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_59cdae95.c:148:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_59cdae95.c:148:17: error: expected ‘;’ at end of input
  148 |     demonstrate_
      |                 ^
      |                 ;
./samples/SAFE/__tmp_59cdae95.c:148:5: error: expected declaration or statement at end of input
  148 |     demonstrate_
      |     ^~~~~~~~~~~~
